--- a/package.json
+++ b/package.json
@@ -1,36 +1,37 @@
 {
-  "name": "reduxreact",
+  "name": "redux-ru-tutorial",
   "version": "1.0.0",
-  "description": "",
+  "description": "Redux RU tutorial",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "eslint": "^3.7.1",
-    "eslint-loader": "^1.5.0",
-    "eslint-plugin-react": "^6.3.0",
-    "express": "^4.14.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "webpack": "^1.13.2",
-    "webpack-dev-middleware": "^1.8.3",
-    "webpack-hot-middleware": "^2.12.2"
+    "babel-core": "^6.4.5",
+    "babel-eslint": "^4.1.6",
+    "babel-loader": "^6.2.1",
+    "babel-plugin-transform-runtime": "^6.4.3",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "eslint": "^1.10.3",
+    "eslint-loader": "^1.2.1",
+    "eslint-plugin-react": "^3.16.1",
+    "express": "^4.13.4",
+    "npm-install-webpack-plugin": "^2.0.2",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.12.12",
+    "webpack-dev-middleware": "^1.5.1",
+    "webpack-hot-middleware": "^2.6.4"
   },
   "dependencies": {
-    "babel-polyfill": "^6.16.0",
-    "babel-runtime": "^6.11.6",
-    "react-hot-loader": "^3.0.0-beta.5",
-    "react-redux": "^4.4.5",
-    "redux": "^3.6.0"
+    "babel-polyfill": "^6.3.14",
+    "babel-runtime": "^6.3.19",
+    "react": "^0.14.6",
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.0.6",
+    "redux": "^3.0.6"
   }
 }
