added map dispatch to props

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,11 @@
 
+
+/*
+0 - правило выключено
+1 - правило выдаст предупреждение
+2 - правило выдаст ошибку
+*/
+
 {
   "extends": "eslint:recommended",
   "parser": "babel-eslint",
@@ -24,8 +31,3 @@
     "react/jsx-uses-vars": 1
   }
 }
-
-/*
-0 - правило выключено
-1 - правило выдаст предупреждение
-2 - правило выдаст ошибку*/
