--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "react-redux": "^4.0.6",
-    "redux": "^3.0.6"
+    "redux": "^3.0.6",
+    "redux-logger": "^2.7.0",
+    "redux-thunk": "^2.1.0"
   }
 }
